<resources>
    <string name="app_name">Fast Delivery</string>
    <string name="email">E-mail</string>
    <string name="senha">Password</string>
    <string name="link_regist">Novo usuario?? Cadastrar-se agora!!</string>
    <string name="nome">Nome</string>
    <string name="Login">Login</string>
    <string name="Nome">Nome</string>
    <string name="senha_c">Confirmar Password</string>
    <string name="Editar">Editar Foto</string>
    <string name="Logout">Logout</string>
    <string name="link_esqueceu">Esqueceu a senha? Recupere Agora!</string>
    <string name="textRecuperar">Recuperar Senha.</string>
    <string name="Enviar">Enviar</string>
    <string name="Aaaah">Acabou de Lembrar? Voltar ao Login!</string>
    <string name="Validacao">Código de Validação</string>
    <string name="btn_validar">Validar</string>
    <string name="Home">Home</string>
    <string name="Perfil">Perfil</string>
    <string name="Olho">Olho</string>
    <string name="title_activity_paginas">paginas</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_voltar">Voltar</string>
    <string name="Validacao_senha">Recuperando Senha!</string>
    <string name="Val">Código de Verificação!</string>
    <string name="btn_verificar">Verificar</string>
    <string name="title_activity_principal">Principal</string>
    <string name="TirarFoto">Tirar Foto.</string>
    <string name="EnviarFoto">Escolher Foto</string>
</resources>
