<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="80dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--android:background="@color/colorPrimaryDark2"-->


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutemail"
        app:passwordToggleEnabled="true">


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/layoutpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/link_recuperar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:background="@drawable/botao_customizado"
        android:text="@string/Login" />

    <TextView
        android:id="@+id/link_regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/link_regist" />

    <!--android:textColor="@color/colorAccent"-->

    <TextView
        android:id="@+id/link_recuperar"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_below="@+id/layoutpassword"
        android:layout_marginTop="0dp"
        android:text="@string/link_esqueceu"
        android:textColor="@android:color/black"
        android:textSize="10sp" />

</RelativeLayout>