<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/EnviarFoto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modal">


    <ImageView
        android:id="@+id/TirarFoto"
        android:layout_width="151dp"
        android:layout_height="112dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginBottom="414dp"
        android:gravity="center_horizontal"
        android:title="Tirar Foto."
        app:srcCompat="@drawable/ic_camera_botao" />

    <ImageView
        android:id="@+id/Escolher"
        android:layout_width="151dp"
        android:layout_height="112dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="415dp"
        android:gravity="center_horizontal"
        android:title="Tirar Foto."
        app:srcCompat="@drawable/ic_enviar" />

    <TextView
        android:id="@+id/TirarFoto."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginBottom="373dp"
        android:text="@string/TirarFoto" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:layout_marginBottom="372dp"
        android:text="@string/EnviarFoto" />



    <Button
        android:id="@+id/btn_logout"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="29dp"
        android:layout_marginRight="77dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/botao_customizado"
        android:text="@string/btn_voltar"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_regist"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="451dp"
        android:layout_marginEnd="107dp"
        android:layout_marginRight="107dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/Enviar"
        android:textColor="@android:color/white" />


    <ImageView
        android:id="@+id/Imagens"
        android:layout_width="252dp"
        android:layout_height="265dp"
        android:layout_above="@+id/btn_logout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="254dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:layout_marginBottom="23dp"
        app:srcCompat="@drawable/ic_images" />

    <ImageView
        android:id="@+id/Imagenss"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="153dp"
        android:layout_above="@+id/btn_logout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="251dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="138dp"
        app:srcCompat="@drawable/ic_images" />
</RelativeLayout>